--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 		<link rel="stylesheet" href="./src/css/estilos.css">
 
-
 		<link rel="stylesheet" href="./src/css/responsivo.css">
 
 		<title>Super Mario Bros - O Filme</title>
@@ -53,5 +52,7 @@
 				</div>
 			</div>
 		</main>
+
+		<script src="./src/js/index.js"></script>
 	</body>
 </html>
